// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarm-column-value Renders \`alarm-column-value\` with custom props 1`] = `
<color-indicator-wrapper-stub
  alarm="[object Object]"
  entity="[object Object]"
  type="impact_state"
>
  <alarm-column-cell-stub
    alarm="[object Object]"
    column="[object Object]"
    columnsfilters="[object Object],[object Object]"
    widget="[object Object]"
  />
</color-indicator-wrapper-stub>
`;

exports[`alarm-column-value Renders \`alarm-column-value\` with required props 1`] = `
<color-indicator-wrapper-stub
  alarm="[object Object]"
  entity="[object Object]"
  type="state"
>
  <alarm-column-cell-stub
    alarm="[object Object]"
    column="[object Object]"
    columnsfilters=""
    widget="[object Object]"
  />
</color-indicator-wrapper-stub>
`;
